--- a/Starter_Code/starter_code/WeatherPy-Copy1.ipynb
+++ b/Starter_Code/starter_code/WeatherPy-Copy1.ipynb
@@ -573,7 +573,8 @@
     "plt.savefig(\"output_data/Fig2.png\")\n",
     "\n",
     "# Show plot\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
