uploading final work

--- a/Starter_Code/starter_code/WeatherPy.ipynb
+++ b/Starter_Code/starter_code/WeatherPy.ipynb
@@ -7719,7 +7719,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "The nothern Hemsiphere shows to have no correlation wind speed & latitude as the slope is horzontal. The Southern Hemisphere, shows better correlation than the nothern as the wind increases at a slow rate the further you go away from the eqautor. "
+    "The nothern Hemsiphere shows to have no correlation wind speed & latitude as the slope is horzontal. \n",
+    "The Southern Hemisphere, shows better correlation than the nothern as the wind increases at a slow rate the further \n",
+    "you go away from the eqautor. "
    ]
   }
  ],
